# MLP

./: .gitignore
materials/: bad_file_1.prcp  bad_file_2.prcp  bad_file_3.prcp  perceptron1.grp  perceptron_graph.prcp  perceptron_matrix.prcp
materials/test_dataset/: bad_1.txt  bad_2.txt
src/: CMakeLists.txt  Doxyfile  Makefile  main.cc  main_console.cc  research.md  test.cc
src/code-samples/: main.cc  main_console.cc
src/common/: error_thread.cc  error_thread.h  metrics.cc  metrics.h  perceptron_settings.cc  perceptron_settings.h  strategy.h  types.h
src/controller/: controller.cc  controller.h
src/lib/: blas_matrix.h  cl_matrix.h  m_thread.cc  m_thread.h  m_time.h  matrix.h
src/metrics_widget/: CMakeLists.txt  Makefile  main.cc  metrics_widget.cc  metrics_widget.h
src/model/: data_manager.cc  data_manager.h  data_manager_test_main.cc  graph.h  graph_model.cc  graph_model.h  matrix_model.cc  matrix_model.h  model.cc  model.h  test.cpp  test_test
src/paint_widget/: CMakeLists.txt  main.cc  paint_widget.cc  paint_widget.h  widget.ui
src/temp/: main.cc
src/tests/: Makefile  file.cc  graph_model_test.cc  matrix_model_test.cc  settings.cc  speed.cc
src/tests/matrix_model/: Makefile  matrix_model_test.cc  matrix_model_test.h
src/tests/matrix_model/materials/: perceptron1.prcp
src/view/: init_view.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  notifications.cc  resources.qrc  settings.cc  settings.h  ui_animation.cc  ui_settings.cc  view_constants.h  view_settings.cc
src/view/Graph/: graphwidget.cc  graphwidget.h
src/view/Paint/: paint_widget.cc  paintwidget.cc  paintwidget.h  widget.ui
src/view/animated_button/: animated_button.cc  animated_button.h
src/view/graph/: graphwidget.cc  graphwidget.h
src/view/metrics_widget/: metrics_widget.cc  metrics_widget.h
src/view/paint/: paint_widget.cc  paint_widget.h  widget.ui
src/view/qcustomplot/: qcustomplot.cpp
